--- a/Teryt/TerytFrontend/src/app/terc/components/countrysides-list/countrysides-list.component.scss
+++ b/Teryt/TerytFrontend/src/app/terc/components/countrysides-list/countrysides-list.component.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   margin-top: 10px;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .form-container {
@@ -55,4 +56,183 @@ mat-form-field {
   display: inline-block;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+@media only screen and (min-width: 200px) {
+  table {
+    width: 25%;
+  }
+
+  .form-container {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 1rem;
+  }
+
+  strong {
+    font-size: 0.9rem;
+    margin-bottom: 10px;
+  }
+
+  mat-form-field {
+    font-size: 0.9rem;
+  }
+
+  th.mat-header-cell {
+    font-size: 10px;
+    margin: 0px;
+    text-align: center;
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+
+  td,
+  th {
+    font-size: 10px;
+  }
+
+  mat-toolbar-row {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 12px;
+  }
+
+  button {
+    font-size: 0.8rem;
+    margin-bottom: 10px;
+  }
+}
+
+@media only screen and (min-width: 500px) {
+  table {
+    width: 60%;
+  }
+
+  th.mat-header-cell {
+    font-size: 15px;
+    margin: 0px;
+    text-align: center;
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+
+  strong {
+    font-size: 1rem;
+    margin-bottom: 10px;
+  }
+
+  td,
+  th {
+    font-size: 10px;
+  }
+
+  mat-toolbar-row {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 10px;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  table {
+    width: 70%;
+  }
+
+  th.mat-header-cell {
+    font-size: 15px;
+    margin: 0px;
+    text-align: center;
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+
+  .form-container {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 1rem;
+  }
+
+  .form-container strong {
+    font-size: 1.1rem;
+    margin-top: 5px;
+  }
+
+  mat-form-field {
+    font-size: 1rem;
+  }
+
+  td,
+  th {
+    font-size: 15px;
+  }
+
+  mat-toolbar-row {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 15px;
+  }
+
+  button {
+    font-size: 1rem;
+    margin-top: 5px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  table {
+    width: 50%;
+  }
+
+  th.mat-header-cell {
+    font-size: 20px;
+    margin: 0px;
+    text-align: center;
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+
+
+  .form-container {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    font-size: 1rem;
+  }
+
+  .form-container strong {
+    font-size: 1.1rem;
+  }
+
+  strong {
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+  }
+
+  td,
+  th {
+    font-size: 15px;
+  }
+
+  mat-toolbar-row {
+    display: flex;
+    margin-top: 10px;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 1.1rem;
+  }
+
+  button {
+    font-size: 1rem;
+  }
 }
