--- a/Teryt/TerytFrontend/src/app/terc/components/delegancies-quarters-list/delegancies-quarters-list.component.scss
+++ b/Teryt/TerytFrontend/src/app/terc/components/delegancies-quarters-list/delegancies-quarters-list.component.scss
@@ -49,3 +49,169 @@ mat-toolbar-row {
   display: flex;
   justify-content: center;
 }
+
+@media only screen and (min-width: 200px) {
+  table {
+    width: 25%;
+  }
+
+  mat-form-field {
+    margin-top: 10px;
+  }
+
+  th.mat-header-cell {
+    font-size: 10px;
+    margin: 0px;
+    text-align: center;
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+
+  td,
+  th {
+    font-size: 10px;
+  }
+
+  mat-toolbar-row {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 12px;
+  }
+
+  button {
+    font-size: 0.6rem;
+    margin-top: 5px;
+  }
+}
+
+@media only screen and (min-width: 500px) {
+  table {
+    width: 60%;
+
+  }
+
+  th.mat-header-cell {
+    font-size: 15px;
+    margin: 0px;
+    text-align: center;
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+
+  td,
+  th {
+    font-size: 10px;
+  }
+
+  mat-toolbar-row {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  mat-toolbar-row strong {
+    font-size: 15px;
+    margin-bottom: 10px;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  table {
+    width: 70%;
+  }
+
+  th.mat-header-cell {
+    font-size: 15px;
+    margin: 0px;
+    text-align: center;
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+
+  .form-container {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 1rem;
+  }
+
+  .form-container strong {
+    font-size: 1.2rem;
+    margin-top: 5px;
+  }
+
+  mat-form-field {
+    margin-top: 10px;
+  }
+
+  td,
+  th {
+    font-size: 15px;
+  }
+
+  mat-toolbar-row {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 15px;
+  }
+
+  button {
+    font-size: 1rem;
+    margin-top: 5px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  table {
+    margin-top: 10px;
+    width: 50%;
+  }
+
+  th.mat-header-cell {
+    font-size: 20px;
+    margin: 0px;
+    text-align: center;
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+
+
+  .form-container {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    font-size: 1.1rem;
+  }
+
+  .form-container strong {
+    font-size: 1.2rem;
+  }
+
+  td,
+  th {
+    font-size: 15px;
+  }
+
+  mat-toolbar-row {
+    display: flex;
+    margin-top: 10px;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 1.2rem;
+  }
+
+  mat-toolbar-row strong {
+    font-size: 1.3rem;
+  }
+
+  button {
+    font-size: 1.2rem;
+    margin-bottom: 5px;
+  }
+}
