--- a/Teryt/TerytFrontend/src/app/ulic/components/paths-list/paths-list.component.scss
+++ b/Teryt/TerytFrontend/src/app/ulic/components/paths-list/paths-list.component.scss
@@ -1,6 +1,7 @@
 .paths-list-container {
   display: flex;
   justify-content: center;
+  text-align: center;
   align-items: center;
   flex-direction: column;
   margin-top: 10px;
@@ -47,4 +48,138 @@ button:hover {
 mat-toolbar-row {
   display: flex;
   justify-content: center;
+}
+
+@media only screen and (min-width: 200px) {
+  table {
+    width: 25%;
+  }
+
+  th.mat-header-cell {
+    font-size: 10px;
+    margin: 0px;
+    text-align: center;
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+
+  td,
+  th {
+    font-size: 10px;
+  }
+
+  mat-toolbar-row {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 12px;
+  }
+
+  mat-toolbar-row strong {
+    font-size: 0.7rem;
+  }
+
+  button {
+    font-size: 0.6rem;
+    margin-top: 5px;
+  }
+}
+
+@media only screen and (min-width: 500px) {
+  table {
+    width: 60%;
+
+  }
+
+  th.mat-header-cell {
+    font-size: 15px;
+    margin: 0px;
+    text-align: center;
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+
+  td,
+  th {
+    font-size: 10px;
+  }
+
+  mat-toolbar-row {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 10px;
+  }
+
+  mat-toolbar-row strong {
+    font-size: 0.9rem;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  table {
+    width: 70%;
+  }
+
+  th.mat-header-cell {
+    font-size: 15px;
+    margin: 0px;
+    text-align: center;
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+
+  td,
+  th {
+    font-size: 15px;
+  }
+
+  mat-toolbar-row {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 15px;
+  }
+
+  button {
+    font-size: 0.9rem;
+    margin-top: 5px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  table {
+    margin-top: 10px;
+    width: 50%;
+  }
+
+  th.mat-header-cell {
+    font-size: 20px;
+    margin: 0px;
+    text-align: center;
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+
+  td,
+  th {
+    font-size: 15px;
+  }
+
+  mat-toolbar-row {
+    display: flex;
+    margin-top: 10px;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 1.2rem;
+  }
+
+  mat-toolbar-row strong {
+    font-size: 1.1rem;
+  }
+
+  button {
+    font-size: 1.2rem;
+    margin-top: 10px;
+  }
 }
